# artframe

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  MIGRATION-PLAN.md  Makefile  PLUGIN-API.md  README.md  config.example.yaml  mypy.ini  pyproject.toml  technical-spec.md  test_generate_samples.py  test_immich_plugin.py  test_new_plugins.py  test_plugin_discovery.py  test_plugin_system.py
.claude/: settings.local.json
.claude/commands/: commit.md  debug-pi.md  deploy.md  lint.md  quick-fix.md  review.md  scaffold-plugin.md  test.md  verify-deploy.md
.devcontainer/: .env.template  Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml
backend/: .flake8  mypy.ini  pyproject.toml  pytest.ini
backend/config/: artframe-pi.yaml
backend/scripts/: copy-frontend.sh  deploy-to-pi.sh  development.sh  install.sh  quick_test.sh  update.sh
backend/src/artframe/: __init__.py  clear_display.py  controller.py  main.py  models.py
backend/src/artframe/config/: __init__.py  manager.py  validator.py
backend/src/artframe/display/: __init__.py  controller.py
backend/src/artframe/display/drivers/: __init__.py  base.py  color_calibration.py  mock.py  waveshare.py  waveshare_driver.py
backend/src/artframe/display/drivers/waveshare/: __init__.py  epd5in83.py  epd7in3e.py  epdconfig.py
backend/src/artframe/logging/: __init__.py  logger.py  setup.py
backend/src/artframe/playlists/: __init__.py  playlist_executor.py  playlist_manager.py  schedule_executor.py  schedule_manager.py
backend/src/artframe/plugins/: base_plugin.py  instance_manager.py  plugin_registry.py
backend/src/artframe/plugins/builtin/: README.md
backend/src/artframe/plugins/builtin/clock/: clock.py  plugin-info.json
backend/src/artframe/plugins/builtin/immich/: README.md  __init__.py  immich.py  plugin-info.json
backend/src/artframe/plugins/builtin/immich_photos/: immich_photos.py  plugin-info.json
backend/src/artframe/plugins/builtin/quote_of_the_day/: plugin-info.json  quote_of_the_day.py  quotes.json
backend/src/artframe/plugins/builtin/repaint/: __init__.py  gemini_client.py  plugin-info.json  repaint.py  styles.json
backend/src/artframe/plugins/builtin/word_of_the_day/: plugin-info.json  vocabulary.json  word_of_the_day.py
backend/src/artframe/scheduling/: __init__.py  condition_evaluator.py  content_orchestrator.py  schedule_manager.py
backend/src/artframe/storage/: __init__.py  manager.py
backend/src/artframe/utils/: __init__.py  display_utils.py  file_utils.py  time_utils.py
backend/src/artframe/web/: __init__.py  app.py  dependencies.py  schemas.py  types.py
backend/src/artframe/web/routes/: __init__.py  api_core.py  api_display.py  api_playlists.py  api_plugins.py  api_schedules.py  api_system.py  config.py  core.py  display.py  instances.py  pages.py  playlists.py  plugins.py  scheduler.py  schedules.py  spa.py  system.py
backend/systemd/: README.md  artframe.service
backend/tests/: __init__.py  conftest.py
backend/tests/factories/: __init__.py  model_factories.py
backend/tests/integration/api/: test_api_workflows.py
backend/tests/integration/components/: __init__.py  test_storage_plugin_integration.py
backend/tests/mocks/: __init__.py  external_apis.py  hardware.py
backend/tests/unit/: test_config.py  test_display.py
backend/tests/unit/controller/: __init__.py  test_controller.py
backend/tests/unit/plugins/: __init__.py  test_base_plugin.py  test_instance_manager.py  test_plugin_registry.py
backend/tests/unit/scheduling/: __init__.py  test_schedule_manager.py
backend/tests/unit/storage/: test_manager.py
backend/tests/unit/web/: __init__.py
backend/tests/unit/web/routes/: __init__.py  test_config.py  test_display.py  test_instances.py  test_plugins.py  test_scheduler.py  test_schedules.py  test_system.py
config/: artframe-laptop.yaml  artframe-pi.yaml
docs/: CONFIGURATION.md  technical-spec.md
examples/: simple_test.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts  generated.ts  types.ts
frontend/src/components/: Button.module.css  Button.test.tsx  Button.tsx  Card.module.css  Card.test.tsx  Card.tsx  Layout.module.css  Layout.tsx  SettingsForm.tsx  StatusGrid.module.css  StatusGrid.tsx  Toast.module.css  Toast.test.tsx  Toast.tsx  index.ts
frontend/src/pages/: index.ts
frontend/src/pages/Config/: Config.module.css  Config.tsx
frontend/src/pages/Dashboard/: Dashboard.module.css  Dashboard.tsx
frontend/src/pages/Plugins/: Plugins.tsx
frontend/src/pages/Schedule/: Schedule.module.css  Schedule.tsx  Schedule.utils.ts
frontend/src/pages/System/: System.module.css  System.tsx  System.utils.ts
frontend/src/queries/: index.ts  usePlaylists.ts  usePlugins.ts  useSchedule.ts  useSystem.test.ts  useSystem.ts
frontend/src/styles/: index.css
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/integration/: api.test.ts
frontend/src/test/mocks/: handlers.ts  server.ts
frontend/src/utils/: date.test.ts  date.ts
scripts/: deploy-to-pi.sh  deploy.sh  install.sh  quick_test.sh  setup_artframe.sh  update.sh
src/artframe/: __init__.py  __main__.py  controller.py  main.py  models.py
src/artframe/config/: __init__.py  manager.py  validator.py
src/artframe/display/: __init__.py  controller.py
src/artframe/logging/: __init__.py  logger.py  setup.py
src/artframe/playlists/: __init__.py  playlist_executor.py  playlist_manager.py  schedule_executor.py  schedule_manager.py
src/artframe/plugins/: __init__.py  base_plugin.py  instance_manager.py  plugin_registry.py
src/artframe/scheduling/: condition_evaluator.py  content_orchestrator.py
src/artframe/storage/: __init__.py  manager.py
src/artframe/utils/: __init__.py  display_utils.py  scheduler.py
src/artframe/web/: __init__.py  app.py  routes.py  types.py
systemd/: artframe.service
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_display.py
(+54 files in other folders)
