[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artframe"
version = "1.0.0"
description = "Raspberry Pi digital photo frame with AI style transformation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Artframe Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "dataclasses-json>=0.6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "spidev>=3.6; platform_machine=='armv7l' or platform_machine=='aarch64'",
    "RPi.GPIO>=0.7.1; platform_machine=='armv7l' or platform_machine=='aarch64'",
    "gpiozero>=2.0; platform_machine=='armv7l' or platform_machine=='aarch64'",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

[project.scripts]
artframe = "artframe.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = ["E203", "B008", "B027"]

[tool.ruff.lint.per-file-ignores]
# Ignore line length in files with embedded HTML/CSS or quote data
"src/artframe/web/routes/core.py" = ["E501"]
"src/artframe/web/routes/spa.py" = ["E501"]
"src/artframe/plugins/builtin/quote_of_the_day/quote_of_the_day.py" = ["E501"]
"src/artframe/plugins/base_plugin.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
# Exclude vendor Waveshare EPD files from type checking
exclude = "display/drivers/waveshare/"

[[tool.mypy.overrides]]
module = ["RPi.*", "spidev", "gpiozero", "schedule", "dataclasses_json", "google.genai", "google.genai.types", "yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendor Waveshare EPD files - copied from upstream, don't type check
module = [
    "artframe.display.drivers.waveshare",
    "artframe.display.drivers.waveshare.epdconfig",
    "artframe.display.drivers.waveshare.epd5in83",
    "artframe.display.drivers.waveshare.epd7in3e",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=artframe",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/artframe"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    # Vendor waveshare files - copied from upstream
    "*/display/drivers/waveshare/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
